@@ -1166,6 +1166,7 @@ private:
 		wxInitAllImageHandlers ();
 
 		Config::FailedToLoad.connect (boost::bind (&App::config_failed_to_load, this));
+		Config::Warning.connect (boost::bind (&App::config_warning, this, _1));
 
 		wxSplashScreen* splash = 0;
 		try {
@@ -1349,6 +1350,11 @@ private:
 	void config_failed_to_load ()
 	{
 		message_dialog (_frame, _("The existing configuration failed to load.  Default values will be used instead.  These may take a short time to create."));
+	}
+
+	void config_warning (string m)
+	{
+		message_dialog (_frame, std_to_wx (m));
 	}
 
 	DOMFrame* _frame;
