@@ -1,3 +1,8 @@
+2017-08-19  Carl Hetherington  <cth@carlh.net>
+
+	* Deal with newly-invalid configured default container ratios
+	gracefully.
+
 2017-08-18  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.11.18 released.
